# grocery-genie

./: .gitignore  CLAUDE.md  Makefile  README.md  skills-lock.json
.claude/: settings.json
.claude/commands/: design-ui.md  done.md  validate-backend.md  validate-extraction.md  validate-mobile.md  validate.md  verify-acceptance.md
.planning/: AUDIT-2026-06-13.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/app/api/routes/: analytics.py  auth.py  budgets.py  categories.py  dashboard.py  health.py  notifications.py  receipts.py  users.py
backend/app/core/: config.py  dependencies.py  jwks_cache.py  rate_limit.py  security.py  seed.py  token_denylist.py
backend/app/events/: dispatcher.py  types.py  wiring.py
backend/app/image/: preprocessor.py  storage.py
backend/app/llm/: provider.py  schemas.py
backend/app/llm/prompts/: category_assignment.py  receipt_extraction.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: analytics_events.py  analytics_service.py  apple_auth.py  auth.py  auth_audit.py  budget_service.py  email.py  google_auth.py  notification_service.py  receipt_service.py  store_service.py
backend/app/tasks/: celery_app.py  receipt_tasks.py  summary_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 20260418_0000_initial_schema.py  20260430_0001_auth_softdelete_prefs.py  20260613_0002_signin_window.py
backend/tests/: conftest.py
backend/tests/api/: test_analytics.py  test_auth.py  test_budgets.py  test_categories.py  test_dashboard.py  test_edge_cases.py  test_free_tier_quota.py  test_health.py  test_notifications.py  test_performance.py  test_receipts.py  test_security.py
backend/tests/core/: test_config.py
backend/tests/e2e/: test_user_journeys.py
backend/tests/events/: test_wiring.py
backend/tests/llm/: test_robustness.py
backend/tests/llm_validation/: README.md  conftest.py  test_extraction_accuracy.py  test_extraction_consistency.py  test_prompt_injection.py  test_prompt_regression.py
backend/tests/llm_validation/ground_truth/: en_us_01.json
backend/tests/services/: test_analytics_service.py  test_auth_security.py  test_budget_service.py  test_image_preprocessing.py  test_notification_service.py
backend/tests/tasks/: test_summary_tasks.py
design_handoff_grocery_genie/: README.md
docs/: DEPLOYMENT.md
docs/prd/: 00-overview.md  02-budget-copilot.md  (+14 more)
marketing/: .env.example  .gitignore  README.md  app.js  index.html  netlify.toml  package.json  robots.txt  server.js  site.webmanifest  sitemap.xml  styles.css  tokens.css  vercel.json
mobile/: app.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json
(+116 files in other folders)
